added profile avatar, updated html and css files for subtitle,added contents to main,created footer

--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 <body>
     <header class="header">
         <h1>Vani Karun</h1>
+        <img src="../web_developer_portfolio/assests/images/girl.jpg" alt="profile-photo"/>
         <nav>
             <ul>
                 <li>
-                    <a href="About">About</a>
+                    <a href="#About">About</a>
                 </li>
                 <li>
-                    <a href="Work">Work</a>
+                    <a href="#Work">Work</a>
                 </li>
                 <li>
-                    <a href="Contact Me">Contact Me</a>
+                    <a href="#Contact-Me">Contact Me</a>
                 </li>
                 <li>
-                    <a href="Resume">Resume</a>
+                    <a href="#Resume">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -31,5 +32,26 @@
     <figure class="subtitle">
         <h2>Coding is Fun!</h2>
     </figure>
+
+    <main>
+        <section id="About">
+            <h3>About Me</h3>
+            <p>
+                A thoughtful servant leader in leading and supporting teams to deliver quality products for business and IT stakeholders.As a certified Scrum Master and Product Owner, I'm experienced in managing projects for both agile, non-agile, and hybrid methodology teams.
+                In my recent role as a Program Manager, I oversaw IT operations,infrastructure,and risk projects to ensure prioritization aligned with organization goals. Governed over program lifecycle and financials for operational and capital projects.<br>
+                After working in healthcare IT for over seven years in various roles ranging from business anlayst to program manager, I decided to switch to programming.I recenly graduated from University of Minnesota coding bootcamp and I'm looking forward to be employed as a full stack developer.
+
+            </p>  
+        </section>
+
+        <section id="Work">
+            <h4>Work</h4>
+        </section>
+
+    </main>
 </body>
+
+<footer id="Contact-Me">
+    <h5>Contact Me</h5>
+</footer>
 
