updated footer css rules

--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
     </main>
 </body>
 
-<footer id="Contact-Me">
+<footer id="Contact-Me" class="contact">
     <h5>Contact Me</h5>
+    <ul>
+        <li>123-456-7890</li>
+        <li>vanikarun21@yahoo.com</li>
+        <li>https://www.linkedin.com/in/vani-k-86292711b/</li>  
+    </ul>
 </footer>
 
