added images to work and subtitle background and updated corresponding css rules

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <main>
         <section id="About">
-            <h3>About Me</h3>
+            <h2>About Me</h2>
             <p>
                 A thoughtful servant leader in leading and supporting teams to deliver quality products for business and IT stakeholders.As a certified Scrum Master and Product Owner, I'm experienced in managing projects for both agile, non-agile, and hybrid methodology teams.
                 In my recent role as a Program Manager, I oversaw IT operations,infrastructure,and risk projects to ensure prioritization aligned with organization goals. Governed over program lifecycle and financials for operational and capital projects.<br>
@@ -45,14 +45,39 @@
         </section>
 
         <section id="Work">
-            <h4>Work</h4>
+            <h2>Work</h2>
+            <div class="flex-container">
+                <a href="#">
+                    <div class="project"><!--flexitem-->
+                        <h3>project1
+                        </h3>
+                        <p>Description</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="project2"><!--flexitem-->
+                        <h3>project2
+                        </h3>
+                        <p>Description</p>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="project3"><!--flexitem-->
+                        <h3>project3
+                        </h3>
+                        <p>Description</p>
+                    </div>
+                </a>
+
+            </div>
+    
         </section>
 
     </main>
 </body>
 
 <footer id="Contact-Me" class="contact">
-    <h5>Contact Me</h5>
+    <h2>Contact Me</h2>
     <ul>
         <li>123-456-7890</li>
         <li>vanikarun21@yahoo.com</li>
