--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 
 <body>
     <header class="header">
+        <div>
         <h1>Vani Karun</h1>
         <img src="../web_developer_portfolio/assests/images/girl.jpg" alt="profile-photo"/>
+    </div>
         <nav>
-            <ul>
+            <ul class="flex-container">
                 <li>
                     <a href="#About">About</a>
                 </li>
