updated readme file with text and demo link; updated work css rules ; padding around about me p html element

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 bootcamp and I'm looking forward to be employed as a full stack developer.
 
             </p>
-        </section> <br> <br>
+        </section> 
 
         <section id="Work">
             <h3>Work</h3>
@@ -103,9 +103,7 @@
                 </a>
             </div>
 
-        </section> <br> <br>
-
-
+        </section> 
 
         <section id="ContactMe" class="contact_me">
             <h3>Contact Me</h3>
@@ -115,7 +113,7 @@
                 <p><a href="https://www.linkedin.com/in/vani-k-86292711b/" target="_blank"
                         rel="noopener noreferrer">LinkedIn</a></p>
             </div>
-        </section> <br> <br>
+        </section> 
     </main>
 </body>
 
