added project images; updated size , links in html and css

--- a/index.html
+++ b/index.html
@@ -85,20 +85,20 @@
                         <p>An e-commerce platform!</p>
                     </div>
                 </a>
-                <a class="flex-item" href="https://www.shopify.com/" target="_blank" rel="noopener noreferrer"> 
+                <a id="AnimalArk" class="flex-item" href="https://animalarkmn.org/" target="_blank" rel="noopener noreferrer"> 
                     <div class="project3 hp">
                         <!--flexitem-->
-                        <h5>Shopify
+                        <h5>AnimalArk
                         </h5>
-                        <p>An e-commerce platform!</p>
+                        <p>A no-kill animal shelter!</p>
                     </div>
                 </a>
-                <a class="flex-item" href="https://www.shopify.com/" target="_blank" rel="noopener noreferrer"> 
+                <a id="TheFoodGroup" class="flex-item" href="https://thefoodgroupmn.org/" target="_blank" rel="noopener noreferrer"> 
                     <div class="project3 hp">
                         <!--flexitem-->
-                        <h5>Shopify
+                        <h5>The Food Group
                         </h5>
-                        <p>An e-commerce platform!</p>
+                        <p>A non-profit to serve community with nutritious foods!</p>
                     </div>
                 </a>
             </div>
