updated media query, resume pdf

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assests/style.css">
     <title>Vani Karun</title>
 </head>
@@ -23,7 +24,7 @@
                 <li class="space"><a href="#About">About</a></li>
                 <li class="space"><a href="#Work">Work</a></li>
                 <li class="space"><a href="#ContactMe">Contact Me</a></li>
-                <li class="space"><a href="../test_folder/resume.html" target="_blank"
+                <li class="space"><a href="assests/Vani Karun - IT Program  Manager.pdf" target="_blank"
                         rel="noopener noreferrer">Resume</a></li>
             </ul>
         </nav>
