old project replaced with new project - Cure4Boredom

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                         <p>Sign up for a personal trainer to accomplish your weight loss goals!</p>
                     </div>
                 </a>
-                <a id="Shopify"class="flex-item" href="https://www.shopify.com/" target="_blank" rel="noopener noreferrer"> 
+                <a id="cure4Boredom"class="flex-item" href="https://vanikarun21.github.io/Cure4Boredom/" target="_blank" rel="noopener noreferrer"> 
                     <div class="project3 hp">
                         <!--flexitem-->
-                        <h5>Shopify
+                        <h5>Cure4Boredom
                         </h5>
-                        <p>An e-commerce platform!</p>
+                        <p>This application will generate jokes, a NASA picture of the day and fun facts based on user's choice!</p>
                     </div>
                 </a>
                 <a id="AnimalArk" class="flex-item" href="https://animalarkmn.org/" target="_blank" rel="noopener noreferrer"> 
