--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
                         <p>This application will generate jokes, a NASA picture of the day and fun facts based on user's choice!</p>
                     </div>
                 </a>
-                <a id="AnimalArk" class="flex-item" href="https://animalarkmn.org/" target="_blank" rel="noopener noreferrer"> 
+                <a id="Unleashed" class="flex-item" href="https://unleashed-pets-finder.herokuapp.com/" target="_blank" rel="noopener noreferrer"> 
                     <div class="project3 hp">
                         <!--flexitem-->
-                        <h5>AnimalArk
+                        <h5>Unleashed
                         </h5>
-                        <p>A no-kill animal shelter!</p>
+                        <p>Bacon of Hope For Our Loved Ones!</p>
                     </div>
                 </a>
                 <a id="TheFoodGroup" class="flex-item" href="https://thefoodgroupmn.org/" target="_blank" rel="noopener noreferrer"> 
