new project added to site

--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
                         <p>Bacon of Hope For Our Loved Ones!</p>
                     </div>
                 </a>
-                <a id="TheFoodGroup" class="flex-item" href="https://thefoodgroupmn.org/" target="_blank" rel="noopener noreferrer"> 
+                <a id="DEIcalendar" class="flex-item" href="https://serene-mesa-60189.herokuapp.com/" target="_blank" rel="noopener noreferrer"> 
                     <div class="project3 hp">
                         <!--flexitem-->
-                        <h5>The Food Group
+                        <h5>DEI Calendar
                         </h5>
-                        <p>A non-profit to serve community with nutritious foods!</p>
+                        <p>A calendar to view cultural holidays & festivals!</p>
                     </div>
                 </a>
             </div>
